--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   provider: ^3.0.0
   dio: ^2.1.0
+  shared_preferences: ^0.5.3
 
 dev_dependencies:
   flutter_test:
